# MyTVRemote

./: .gitignore  README.md  package-lock.json  package.json
docs/: review1.md
src/: index.html  main.js
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/src/: main.rs  polo.proto  remotemessage.proto
