[package]
name = "sony-tv-remote"
version = "0.1.0"
description = ""
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", features = ["blocking"] }
local-ip-address = "0.6"
tokio = { version = "1", features = ["full"] }
regex = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
