[package]
name = "sony-tv-remote"
version = "0.1.0"
description = ""
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57.0"

[build-dependencies]
tauri-build = { version = "*", features = [] }
prost-build = "0.12"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "*", features = [] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
local-ip-address = "0.6"
regex = "1"
mdns-sd = "0.11"
flume = "0.11"
once_cell = "1.19"
rayon = "1.8"
base64 = "0.22"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.11"
rustls-pemfile = "1.0"
webpki-roots = "0.25"
pem = "3.0"
rsa = "0.9"
sha2 = "0.10"
hex = "0.4"
x509-parser = "0.15"


[features]
custom-protocol = ["tauri/custom-protocol"]
